refactored styling and fixed whitespace problem

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -5,6 +5,7 @@
 .btn {
   font-family: $proxima;
   margin: 5px 5px 0 0;
+  white-space: normal;
 
 }
 
